--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -9,7 +9,7 @@
                 {% if request.user.is_superuser %}
                         <a class="nav-link m-2" href="/admin_panel/">Панель администратора</a>
                 {% endif %}
-                <a class="nav-link text-light m-2" href="/complaint/">Пожаловаться</a>
+                <a class="nav-link text-light m-2" href="/tech_support/">Пожаловаться</a>
         </form>
         <div class="position-absolute bottom-25 end-0">
             <ul class="navbar-nav flex-row-reverse">
