--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -1,38 +1,8 @@
-<<<<<<< HEAD
 {% load static %}
 
-<nav class="navbar p-3" style="background-color: #023653; color: white; position: fixed; width: 100%; margin: 0; z-index: 100000; top: 0;">
-    <div class="container-fluid" width="300" height="00">
-            <a href="/" style="margin: -150px; margin-left: -70px; margin-bottom: -180px;"><img src="{% static 'media/main_logo.png' %}" alt="Logo" width="300" height="300" class="d-inline-block align-text-top"></a>
-        <form class="d-flex col-11 offset-3">
-                <a class="nav-link nav-hover m-2 icon-link icon-link-hover fs-5" href="/create_bot/">Создать бота</a>
-            {% if request.user.is_authenticated %}
-                {% if request.user.is_superuser %}
-                        <a class="nav-link m-2" href="/admin_panel/">Панель администратора</a>
-                {% endif %}
-                <a class="nav-link text-light m-2" href="/tech_support/">Пожаловаться</a>
-        </form>
-        <div class="position-absolute bottom-25 end-0">
-            <ul class="navbar-nav flex-row-reverse">
-                <li class="nav-item=">
-                    <a class="nav-link nav-hover text-light m-2  fs-5" href="/profile/{{request.user.id}}/">Профиль</a>
-                </li>
-                <li class="vl"></li>
-                <li class="nav-item=">
-                    {% if request.user.is_authenticated %}
-                        <a class="nav-link nav-hover text-light m-2 fs-5" href="/logout/">Выйти</a>
-                    {% else %}
-                        <a class="nav-link nav-hover text-light m-2 fs-5" href="/login/">Войти</a>
-                    {% endif %}
-                </li>
-          </ul>
-        </div>
-      <form class="d-flex" role="search">
-                    <a class="nav-link text-light text-right m-2" href="/profile/{{request.user.id}}/">Профиль</a>
-=======
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #023653; color: white">
-    <a class="navbar-brand" href="/" style=" margin-left: 10px">
-        <img src="../../staticroot/media/main_logo (1).png" alt="Logo" width="150" height="60" class="d-inline-block align-text-top object-fit-cover">
+    <a class="navbar-brand" href="/" style="margin: -150px; margin-left: -70px; margin-bottom: -180px;">
+        <img src="../../staticroot/media/main_logo.png" alt="Logo" width="300" height="300" class="d-inline-block align-text-top">
     </a>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
@@ -40,9 +10,8 @@
                 <a class="nav-link nav-hover text-light m-2 fs-5" href="/create_bot/">Создать бота</a>
             </li>
             <li class="nav-item">
->>>>>>> feature/fix_footer
                 {% if request.user.is_authenticated %}
-                    <a class="nav-link text-light m-2 nav-hover icon-link icon-link-hover fs-5" href="/complaint/">Пожаловаться</a>
+                    <a class="nav-link text-light m-2 nav-hover icon-link icon-link-hover fs-5" href="/tech_support/">Пожаловаться</a>
                 {% endif %}
 
             </li>
