исправление языка подвала и добавление ссылки на вход

--- a/first/templates/footer.html
+++ b/first/templates/footer.html
@@ -13,8 +13,7 @@
               <i class="fas fa-gem me-3"></i>Bot God
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              На этом сайте вы можете создать своего уникального телеграмм-бота. Мы предлагаем уникальный набор функций для бота. Начните прямо сейчас!
             </p>
           </div>
           <!-- Grid column -->
@@ -23,19 +22,22 @@
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
+              Меню
             </h6>
             <p>
-              <a href="/" class="text-reset h-25">Main</a>
+              <a href="/" class="text-reset h-25">Главная</a>
             </p>
             <p>
-              <a href="/registration/" class="text-reset">Registration</a>
+              <a href="/registration/" class="text-reset">Регистрация</a>
             </p>
             <p>
-              <a href="/create_bot/" class="text-reset">Create bot</a>
+              <a href="/login/" class="text-reset">Войти</a>
             </p>
             <p>
-              <a href="/complaint/" class="text-reset">Help</a>
+              <a href="/create_bot/" class="text-reset">Создать бота</a>
+            </p>
+            <p>
+              <a href="/tech_support/" class="text-reset">Помощь</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -43,7 +45,7 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Contacts</h6>
+            <h6 class="text-uppercase fw-bold mb-4">Контакты</h6>
             <p>
               <i class="fas fa-envelope me-3"></i>
               bot_god@gmail.com
