add part of cards

--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -84,6 +84,20 @@
     new Card("Info about PC", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "info.png", [1,0,0]),
     new Card("Turn off the PC", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "turnoff.png", [1, 0, 0]),
     new Card("Reboot the PC", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "reboot.png", [1, 0, 0]),
+    new Card("Panda", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "panda.jpg", [1,1,1]),
+    new Card("Pdf ==> Docx", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "free", "pdf_to_docx.png", [1,1,1]),
+    new Card("Pdf ==> Jpg", "Данная функция отправляет вам случайный анекдот", "free", "pdf_to_jpg.svg", [1,1,1]),
+    new Card("Скачать с ПК", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "download.png", [1,0,0]),
+    new Card("Поменять обои на ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "wallpaper.jpg", [1,0,0]),
+    new Card("Загрузить на ПК", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "upload.png", [1, 0, 0]),
+    new Card("MP4 ==> MP3", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "mp4_to_mp3.jpg", [1, 0, 0]),
+    new Card("API", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "api.png", [1,1,1]),
+    new Card("Получить изображение с веб-камеры ПК", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "free", "webcam.png", [1,1,1]),
+    new Card("Скачать видео с ", "Данная функция отправляет вам случайный анекдот", "free", "smile.png", [1,1,1]),
+    new Card("Screenshot", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "camera.png", [1,0,0]),
+    new Card("Info about PC", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "info.png", [1,0,0]),
+    new Card("Turn off the PC", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "turnoff.png", [1, 0, 0]),
+    new Card("Reboot the PC", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "reboot.png", [1, 0, 0]),
     new Card("Panda", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "panda.jpg", [1,1,1])]
 
     for(let i = 0; i < cards.length; ++i){
