--- a/first/templates/telegram_auth.html
+++ b/first/templates/telegram_auth.html
@@ -8,7 +8,7 @@
 
 <p>Would you like to enter via Telegram?</p>
 
-<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="https://grumpy-ties-swim-94-143-50-138.loca.lt/profile2" data-request-access="write"></script>
+<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="https://weak-camels-dress-94-143-50-138.loca.lt/auth/complete/telegram" data-request-access="write"></script>
 
 <!-- THIS SCRIPT SHOULD BE REPLACED -->
 <!-- THIS SCRIPT SHOULD BE REPLACED -->
