--- a/first/templates/tech_support.html
+++ b/first/templates/tech_support.html
@@ -4,16 +4,20 @@
 <div class="container" style="margin-top: 10vh;">
     <div class="row">
         <h3 class="text-center">Вы можете оставить жалобу или написать нам предложение для сервиса</h3>
+        <form action=""></form>
         <div class="col-8 offset-2 p-5 card" style="min-height: 56.5vh;">
-            <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email</label>
-            </div>
-            <div class="input-group" style="min-height: 40vh;">
-                <span class="input-group-text">Напишите текст сообщения</span>
-                <textarea class="form-control" aria-label="With textarea"></textarea>
-            </div>
-            <input type="submin" class="btn btn-primary p-2 mt-3 fs-4" value="Отправить">
+            <form action="" method="post">
+                {% csrf_token %}
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" required>
+                    <label for="floatingInput">Email</label>
+                </div>
+                <div class="input-group" style="min-height: 40vh;">
+                    <span class="input-group-text">Напишите текст сообщения</span>
+                    <textarea class="form-control" aria-label="With textarea" name="email_text" required></textarea>
+                </div>
+                <input type="submit" class="btn btn-primary p-2 mt-3 fs-4" value="Отправить" >
+            </form>
         </div>
     </div>
 </div>
