--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -9,7 +9,7 @@
           <div class="card-body text-center">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3">Имя Фамилия</h5>
+            <h5 class="my-3">{{ user.first_name }} {{ user.last_name }}</h5>
             <div class="d-flex justify-content-center mb-2 mt-4">
                 <div><h6>Баланс: </h6></div><br>
                 <a style="display: block;" href=""><input class="btn btn-primary" type="button" value="Пополнить"></a>
@@ -25,7 +25,7 @@
                 <p class="mb-0">Имя</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Имя Фамилия</p>
+                <p class="text-muted mb-0">{{ user.first_name }} {{ user.last_name }}</p>
               </div>
             </div>
             <hr>
