--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -11,7 +11,7 @@
               class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3">{{ user.first_name }} {{ user.last_name }}</h5>
             <div class="d-flex justify-content-center mb-2 mt-4">
-                <div><h6>Баланс: </h6></div><br>
+                <div><h6>Баланс: {{ balance }}</h6></div><br>
                 <a style="display: block;" href=""><input class="btn btn-primary" type="button" value="Пополнить"></a>
             </div>
           </div>
