--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -78,27 +78,28 @@
         }
     }
 
-    let cards = [new Card("Wiki", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "free", "wiki.svg", [1,1,1]),
-    new Card("Anekdot", "Данная функция отправляет вам случайный анекдот", "free", "smile.png", [1,1,1]),
-    new Card("Screenshot", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "camera.png", [1,0,0]),
-    new Card("Info about PC", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "info.png", [1,0,0]),
-    new Card("Turn off the PC", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "turnoff.png", [1, 0, 0]),
-    new Card("Reboot the PC", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "reboot.png", [1, 0, 0]),
-    new Card("Panda", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "panda.jpg", [1,1,1]),
-    new Card("Pdf ==> Docx", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "free", "pdf_to_docx.png", [1,1,1]),
-    new Card("Pdf ==> Jpg", "Данная функция отправляет вам случайный анекдот", "free", "pdf_to_jpg.svg", [1,1,1]),
-    new Card("Скачать с ПК", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "download.png", [1,0,0]),
-    new Card("Поменять обои на ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "wallpaper.jpg", [1,0,0]),
-    new Card("Загрузить на ПК", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "upload.png", [1, 0, 0]),
-    new Card("MP4 ==> MP3", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "mp4_to_mp3.jpg", [1, 0, 0]),
-    new Card("API", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "api.png", [1,1,1]),
-    new Card("Получить изображение с веб-камеры ПК", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "free", "webcam.png", [1,1,1]),
-    new Card("Скачать видео с ", "Данная функция отправляет вам случайный анекдот", "free", "smile.png", [1,1,1]),
-    new Card("Screenshot", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "camera.png", [1,0,0]),
-    new Card("Info about PC", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "info.png", [1,0,0]),
-    new Card("Turn off the PC", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "turnoff.png", [1, 0, 0]),
-    new Card("Reboot the PC", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "reboot.png", [1, 0, 0]),
-    new Card("Panda", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "panda.jpg", [1,1,1])]
+    let cards = [new Card("Вики", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "free", "wiki.svg", [1,1,1]),
+    new Card("Анекдот", "Данная функция отправляет вам случайный анекдот", "free", "smile.png", [1,1,1]),
+     new Card("Панда", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "panda.jpg", [1,1,1]),
+
+    new Card("Получить изображение с веб-камеры ПК", "Данная функция позволяет дистанционно получить изображение с веб-камеры компьютера", "free", "webcam.png", [1,1,1]),
+    new Card("Поменять обои на ПК", "Данная функция меняет обои на вашем компьютере", "free", "wallpaper.jpg", [1,0,0]),
+    new Card("Выключить ПК", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "turnoff.png", [1, 0, 0]),
+    new Card("Перезагрузить ПК", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "reboot.png", [1, 0, 0]),
+    new Card("Информация о ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "info.png", [1,0,0]),
+    new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "camera.png", [1,0,0]),
+    new Card("Скачать с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "free", "download.png", [1,0,0]),
+    new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "free", "upload.png", [1, 0, 0]),
+
+    new Card("Pdf ==> Docx", "Данная функция конвертирует файлы формата PDF в файлы формата DOCX", "free", "pdf_to_docx.png", [1,1,1]),
+    new Card("Pdf ==> Jpg", "Данная функция конвертирует файлы формата PDF в файлы формата jpg", "free", "pdf_to_jpg.svg", [1,1,1]),
+    new Card("MP4 ==> MP3", "Данная функция конвертирует файлы формата MP4 в файлы формата MP3", "free", "mp4_to_mp3.jpg", [1, 0, 0]),
+
+    new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "free", "api.png", [1,1,1]),
+    new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "free", "youtube_downloader.png", [1,1,1]),
+    new Card("TTS", "Данная функция преобразовывает текст в речь, синтезируя голос", "free", "tts_logo.png", [1,1,1]),
+    new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "free", "stt_logo.png", [1,1,1]),]
+
 
     for(let i = 0; i < cards.length; ++i){
         let card_values = cards[i]
