--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -50,6 +50,8 @@ a.nav-hover:hover{
 	line-height: 28px;  
 	margin-right: 10px;      
 	position: relative;
+	right: 1px;
+	top: 0px;
 	vertical-align: middle;
 	font-size: 14px;
 	user-select: none;	
@@ -70,7 +72,7 @@ a.nav-hover:hover{
 	content: '';
 	position: absolute;
 	top: 1px;
-	left: 1px;	
+	right: 1px;	
 	display: inline-block;
 	width: 24px;	
 	height: 24px;
@@ -80,10 +82,6 @@ a.nav-hover:hover{
 	transition: .15s;
 }
 .checkbox-ios input[type=checkbox] {
-	display: block;	
-	width: 0;
-	height: 0;	
-	position: absolute;
 	z-index: -1;
 	opacity: 0;
 }
