--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -50,7 +50,7 @@ a.nav-hover:hover{
 	line-height: 28px;  
 	margin-right: 10px;      
 	position: relative;
-	right: 1px;
+	left: 1px;
 	top: 0px;
 	vertical-align: middle;
 	font-size: 14px;
@@ -71,8 +71,6 @@ a.nav-hover:hover{
 .checkbox-ios .checkbox-ios-switch:before {
 	content: '';
 	position: absolute;
-	top: 1px;
-	right: 1px;	
 	display: inline-block;
 	width: 24px;	
 	height: 24px;
