--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -88,7 +88,7 @@
     new Card("Перезагрузить ПК", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "reboot.png", [1, 0, 0]),
     new Card("Информация о ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "info.png", [1,0,0]),
     new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "camera.png", [1,0,0]),
-    new Card("Скачать с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "free", "download.png", [1,0,0]),
+    new Card("Скачивание файла с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "free", "download.png", [1,0,0]),
     new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "free", "upload.png", [1, 0, 0]),
 
     new Card("Pdf ==> Docx", "Данная функция конвертирует файлы формата PDF в файлы формата DOCX", "free", "pdf_to_docx.png", [1,1,1]),
