fix names conflict

--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -39,17 +39,17 @@
                 <input id="search" type="text" class="form-control" placeholder="Поиск по функциям"><br>
                 <div id="os_search" class="col-8 offset-3 mb-3">
                     <label class="checkbox-ios" style="margin-left: auto; margin-top: 10px">
-                        <input type="checkbox" id="windows" name="functions" value="win">
+                        <input type="checkbox" id="windows" name="function_win" value="win">
                         <span class="checkbox-ios-switch"></span>
                     </label>
                     <span>Windows</span>
                     <label class="checkbox-ios" style="margin-left: auto; margin-top: 10px">
-                        <input type="checkbox" id="linux" name="functions" value="linux">
+                        <input type="checkbox" id="linux" name="functions_linux" value="linux">
                         <span class="checkbox-ios-switch"></span>
                     </label>
                     <span>Mac</span>
                     <label class="checkbox-ios" style="margin-left: auto; margin-top: 10px">
-                        <input type="checkbox" id="mac" name="functions" value="mac">
+                        <input type="checkbox" id="mac" name="functions_mac" value="mac">
                         <span class="checkbox-ios-switch"></span>
                     </label>
                     <span>Linux</span>
