part of working payment

--- a/first/templates/payment.html
+++ b/first/templates/payment.html
@@ -8,10 +8,11 @@
                 <input type="hidden" name="receiver" value="4100118151035496"/>
                 <input type="hidden" name="label" value="$order_id"/>
                 <input type="hidden" name="quickpay-form" value="button"/>
-                <input type="hidden" name="sum" value="4568.25" data-type="number"/>
-                <label><input type="radio" name="paymentType" value="PC"/>ЮMoney</label>
-                <label><input type="radio" name="paymentType" value="AC"/>Банковской картой</label>
-                <input type="submit" value="Перевести"/>
+                <input type="hidden" name="successURL" value="http://62.84.98.50/payment_success{{summ_of_increase}}"/>
+                <input type="hidden" name="sum" value="2" data-type="number"/>
+                <label><input class="form-check-input" type="radio" name="paymentType" value="PC"/>ЮMoney</label><br>
+                <label><input class="form-check-input" type="radio" name="paymentType" value="AC"/>Банковской картой</label>
+                <input class="btn btn-primary" type="submit" value="Перевести"/>
             </form>
         </div>
     </div>
