--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -22,12 +22,12 @@
                 <div class="modal fade" style="margin-top: 15vh;" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                      tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                     <div class="modal-dialog">
-                        <div class="modal-content">
-                        <div class="modal-header" id="modal_header">
+                        <div class="modal-content" style="width: 200%; margin-left: -50%; height: 50vh">
+                        <div class="modal-header" style="text-align: center" id="modal_header">
                             <h1 class="modal-title fs-5" id="staticBackdropLabel"></h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                         </div>
-                        <div id="modal_content" class="modal-body">
+                        <div id="modal_content" class="modal-body col-6 offset-6">
                             ...
                         </div>
                         <div class="modal-footer">
