--- a/first/templates/telegram_auth.html
+++ b/first/templates/telegram_auth.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Django Telegram Login Widget Example</title>
-</head>
-<body>
-
-<p>Would you like to enter via Telegram?</p>
-
-<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="http://62.84.98.50/auth/complete/telegram" data-request-access="write"></script>
-
-<!-- THIS SCRIPT SHOULD BE REPLACED -->
-<!-- THIS SCRIPT SHOULD BE REPLACED -->
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container mt-5">
+    <div class="row mt-5">
+        <div class="card col-8 offset-2">
+            <h2 class="text-center">Наш сайт работает с телеграмм, поэтому авторизуйтесь с помощью своего телеграмм-аккаунта</h2>
+            <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="http://62.84.98.50/auth/complete/telegram" data-request-access="write"></script>
+        </div>
+    </div>
+</div>
+{% endblock %}
