--- a/first/templates/download_bot.html
+++ b/first/templates/download_bot.html
@@ -1,18 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% if request.os == "win" %}
-        <a href="../../dist/BOT.exe" download="">
-            Скачать БОТА
-        </a>
-    {% else %}
-        <a href="../../dist/BOT" download="">
-            Скачать БОТА
-        </a>
-    {% endif %}
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container mt-5">
+    <div class="row mt-5">
+        <div class="col-10 offset-1 mt-5">
+            <h2 class="text-center mt-5">Чтобы скачать файл с вашим уникальным ботом, нажмите кнопку ниже. Если у вас возникли проблемы, вы всегда можете 
+                обратится в <a style="text-decoration: none;" href="../tech_support/">тех. поддержку!</a></h2>
+            <div class="text-center">
+                {% if request.os == "win" %}
+                    <a class="btn btn-primary p-3 fs-3 w-30" href="../../dist/BOT.exe" download="">
+                        Скачать бота
+                    </a>
+                {% else %}
+                <a class="btn btn-primary p-3 fs-3 w-30" href="../../dist/BOT" download="">
+                    Скачать бота
+                </a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
