--- a/first/templates/download_bot.html
+++ b/first/templates/download_bot.html
@@ -7,11 +7,11 @@
                 обратится в <a style="text-decoration: none;" href="../tech_support/">тех. поддержку!</a></h2>
             <div class="text-center">
                 {% if request.os == "win" %}
-                    <a class="btn btn-primary p-3 fs-3 w-30" href="../../dist/BOT.exe" download="">
+                    <a class="btn btn-primary p-3 fs-3 w-30" href="/home/setta1a/PycharmProjects/bot_gad/BOT/BOT.py" download="">
                         Скачать бота
                     </a>
                 {% else %}
-                <a class="btn btn-primary p-3 fs-3 w-30" href="../../dist/BOT" download="">
+                <a class="btn btn-primary p-3 fs-3 w-30" href="/home/setta1a/PycharmProjects/bot_gad/BOT/BOT.py" download="">
                     Скачать бота
                 </a>
                 {% endif %}
