--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -24,12 +24,9 @@
             <ul class="navbar-nav flex-row-reverse">
                 {% if request.user.is_authenticated %}
                     <li class="nav-item=">
-                        <a class="nav-link nav-hover text-light m-2  fs-5" href="/profile/{{request.user.id}}/">Профиль</a>
+                        <a class="nav-link nav-hover text-light m-2  fs-5" href="/profile/">Профиль</a>
                     </li>
                     <li class="vl"></li>
-                    <li class="nav-item=">
-                        <a class="nav-link nav-hover text-light m-2 fs-5" href="/logout/">Выйти</a>
-                    </li>
                 {%else%}
                     <li class="nav-item=">
                         <a class="nav-link nav-hover text-light m-2  fs-5" href="/registration/">Регистрация</a>
