add profile photo

--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -7,10 +7,9 @@
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+            <img src={{user.photo_url}}" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3">{{ user.first_name }} {{ user.last_name }}</h5>
-              <h5>{{user}}</h5>
             <div class="d-flex justify-content-center mb-2 mt-4">
                 <a style="display: block;" href=""><input class="btn btn-primary" type="button" value="Пополнить"></a>
             </div>
