--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -7,7 +7,7 @@
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src={{user.photo_url}}" alt="avatar"
+            <img src="{{ user.photo_url }}" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3">{{ user.first_name }} {{ user.last_name }}</h5>
             <div class="d-flex justify-content-center mb-2 mt-4">
