--- a/first/templates/tech_support.html
+++ b/first/templates/tech_support.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="row text-start mt-2" style="color:#4e4e52">
                     <p style="color:black">Сообщение:<Br>
-                    <textarea class="form-control" aria-label="With textarea" name="email_text" style="border-color: #d2d2d4; height:200px"></textarea>
+                    <textarea class="form-control" aria-label="With textarea" name="email_text" style="border-color: #d2d2d4; height:20vh; max-height: 50vh"></textarea>
                 </div>
                 <div class="row text-start mt-5" style="color:#4e4e52">
                     <input class="btn btn-primary col-4 offset-4 p-2 fs-5" type="submit" value="Отправить">
