add template to syntaxis

--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -30,6 +30,13 @@
                         <div id="modal_content" style="display: inline-block;" class="modal-body">
                             <img style="border: 2px solid white; border-radius: 10px;" src="../../staticroot/gifs/wiki.gif" class="col-5" alt="">
                             <p id="modal_content_text" class="col-6 offset-6" style="margin-top: -20vh;"></p>
+                            <div id="syntax_text" class="col-6 offset-6 mt-5">
+                                <p>Синтаксис команды</p>
+                                <div class="form-floating">
+                                  <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" disabled>
+                                  <label for="floatingInputDisabled"><span style="color: rgb(0, 119, 255)">/wiki</span> <i> слово для поиска</i></label>
+                                </div>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Закрыть</button>
