--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -34,7 +34,7 @@
                                 <p>Синтаксис команды</p>
                                 <div class="form-floating">
                                   <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" disabled>
-                                  <label for="floatingInputDisabled"><span style="color: rgb(0, 119, 255)">/wiki</span> <i> слово для поиска</i></label>
+                                  <label for="floatingInputDisabled"><span id="modal_syntaxis" style="color: rgb(0, 119, 255)"></span> <i> слово для поиска</i></label>
                                 </div>
                             </div>
                         </div>
@@ -64,40 +64,42 @@
     'use strict';
 
     class Card{
-        constructor(name, descriprion, price, photo, os) {
+        constructor(name, descriprion, photo, os, modal, syntaxis) {
             this.name = name
             this.descriprion = descriprion
-            this.price = price
             this.photo = photo
             this.os = os
+            this.modal = modal
+            this.syntaxis = syntaxis
+
         }
 
         returnValues() {
-            return this.name, this.descriprion, this.price, this.photo, this.os 
+            return this.name, this.descriprion, this.photo, this.os, this.modal, this.syntaxis
         }
     }
 
-    let cards = [new Card("Вики", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "free", "wiki.svg", [1,1,1]),
-    new Card("Анекдот", "Данная функция отправляет вам случайный анекдот", "free", "smile.png", [1,1,1]),
-     new Card("Панда", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "panda.jpg", [1,1,1]),
+    let cards = [new Card("Вики", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "wiki.svg", [1,1,1], "wiki.gif", "wiki"),
+    new Card("Анекдот", "Данная функция отправляет вам случайный анекдот", "smile.png", [1,1,1], "anecdot.gif", "anekdot"),
+     new Card("Панда", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "panda.jpg",  [1,1,1], "panda.gif", "panda"),
 
-    new Card("Получить изображение с веб-камеры ПК", "Данная функция позволяет дистанционно получить изображение с веб-камеры компьютера", "free", "webcam.png", [1,1,1]),
-    new Card("Поменять обои на ПК", "Данная функция меняет обои на вашем компьютере", "free", "wallpaper.jpg", [1,0,0]),
-    new Card("Выключить ПК", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "turnoff.png", [1, 0, 0]),
-    new Card("Перезагрузить ПК", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "reboot.png", [1, 0, 0]),
-    new Card("Информация о ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "info.png", [1,0,0]),
-    new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "camera.png", [1,0,0]),
-    new Card("Скачивание файла с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "free", "download.png", [1,0,0]),
-    new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "free", "upload.png", [1, 0, 0]),
+    new Card("Получить изображение с веб-камеры ПК", "Данная функция позволяет дистанционно получить изображение с веб-камеры компьютера", "webcam.png", [1,1,1], "webcam.gif", "webcam"),
+    new Card("Поменять обои на ПК", "Данная функция меняет обои на вашем компьютере", "wallpaper.jpg", [1,0,0], "---", "wallpaper"),
+    new Card("Выключить ПК", "Данная функция обеспечивает возможность удаленного выключения компьютера", "turnoff.png", [1, 0, 0], "---", "turnoff"),
+    new Card("Перезагрузить ПК", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "reboot.png", [1, 0, 0], "---", "reboot"),
+    new Card("Информация о ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "info.png", [1,0,0], "info.gif", "komp"),
+    new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "camera.png", [1,0,0], "capture.gif", "capture"),
+    new Card("Скачивание файла с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "download.png", [1,0,0], "download.gif", "download"),
+    new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "upload.png", [1, 0, 0], "upload.gif", "upload"),
 
-    new Card("Pdf ==> Docx", "Данная функция конвертирует файлы формата PDF в файлы формата DOCX", "free", "pdf_to_docx.png", [1,1,1]),
-    new Card("Pdf ==> Jpg", "Данная функция конвертирует файлы формата PDF в файлы формата jpg", "free", "pdf_to_jpg.svg", [1,1,1]),
-    new Card("MP4 ==> MP3", "Данная функция конвертирует файлы формата MP4 в файлы формата MP3", "free", "mp4_to_mp3.jpg", [1, 0, 0]),
+    new Card("Pdf ==> Docx", "Данная функция конвертирует файлы формата PDF в файлы формата DOCX", "pdf_to_docx.png", [1,1,1], "---", "---"),
+    new Card("Pdf ==> Jpg", "Данная функция конвертирует файлы формата PDF в файлы формата jpg", "pdf_to_jpg.svg", [1,1,1], "---", "---"),
+    new Card("MP4 ==> MP3", "Данная функция конвертирует файлы формата MP4 в файлы формата MP3", "mp4_to_mp3.jpg", [1, 0, 0], "---", "---"),
 
-    new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "free", "api.png", [1,1,1]),
-    new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "free", "youtube_downloader.png", [1,1,1]),
-    new Card("TTS", "Данная функция преобразовывает текст в речь, синтезируя голос", "free", "tts_logo.png", [1,1,1]),
-    new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "free", "stt_logo.png", [1,1,1]),]
+    new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "api.png", [1,1,1], "---", "---"),
+    new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "youtube_downloader.png", [1,1,1], "yt.gif", "yt"),
+    new Card("TTS", "Данная функция преобразовывает текст в речь, синтезируя голос", "tts_logo.png", [1,1,1], "tts.gif", "tts"),
+    new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "stt_logo.png", [1,1,1], "stt.gif", "stt"),]
 
 
     for(let i = 0; i < cards.length; ++i){
@@ -131,6 +133,8 @@
             console.log(modal_content)
             modal_header.innerHTML = card_values.name
             modal_content_text.innerHTML = card_values.descriprion
+            modal_syntaxis.innerHTML = card_values.syntaxis
+
         })
         
 
